--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,11 +3,12 @@
 <head>
 <title>Hello WebSocket</title>
 <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<!-- <link href="/main.css" rel="stylesheet">  -->
+<link href="/style.css" rel="stylesheet">
 <script src="/webjars/jquery/jquery.min.js"></script>
 <script src="/webjars/sockjs-client/sockjs.min.js"></script>
 <script src="/webjars/stomp-websocket/stomp.min.js"></script>
-<script src="/app.js"></script>
+<script src="/js/app.js" defer></script>
+<script src="/js/script.js" defer></script>
 </head>
 <body>
 	<noscript>
